--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-vertical-timeline-component": "^3.6.0",
+    "resend": "^4.0.1-alpha.0",
     "tailwindcss": "3.4.12",
     "typescript": "5.6.2"
   },
