--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-email/components": "^0.0.26",
     "@react-email/tailwind": "^1.0.0",
+    "@sendgrid/mail": "^8.1.4",
     "@types/node": "22.5.5",
     "@types/react": "18.3.8",
     "@types/react-dom": "18.3.0",
