--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.13",
     "framer-motion": "^11.11.1",
-    "next": "14.2.13",
+    "next": "^14.2.33",
     "postcss": "8.4.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
