--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@react-email/components": "^0.0.26",
     "@react-email/tailwind": "^1.0.0",
-    "@sendgrid/mail": "^8.1.4",
     "@types/node": "22.5.5",
     "@types/react": "18.3.8",
     "@types/react-dom": "18.3.0",
@@ -28,7 +27,7 @@
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-vertical-timeline-component": "^3.6.0",
-    "resend": "^4.0.1-alpha.0",
+    "resend": "^4.8.0",
     "tailwindcss": "3.4.12",
     "typescript": "5.6.2"
   },
